# meme_emoji_rust_alpha

./: .gitignore  Cargo.toml  README.md
auto_powershell/: create_emoji_rs_files.ps1  move_images.ps1  print_memes.rs.ps1
resources/images/: file.txt
src/: lib.rs
